# DeepConsultation

./: .gitignore  README.extras.md  README.md
doc/: INSTALL.md  README.md  UPLOAD.md
src/: README.md  pyproject.toml  setup.py
src/deep_consultation/: chat_deepinfra.py  core.py  core_audio.py
test/: tes1.py
