[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-consultation"
version = "0.1.0"
authors = [{ name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com" }]
description = "Uma biblioteca para consultas com GPTs"
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["OpenAI"]

[tool.setuptools]
packages = ["deep_consultation"]

